# ragoon

./: .gitignore  .readthedocs.yaml  CITATION.cff  RAGoon : Improve Large Language Models retrieval using dynamic web-search.ipynb  README.md  app.py  docs.sh  pyproject.toml  requirements.txt  search.py  setup.py
assets/: badge.pxd  outline logo.pxd
docs/source/: autosummary.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  ragoon.rst  tutorials.rst
docs/source/_templates/autosummary/: base.rst
docs/source/api/: ragoon.chunks.rst  ragoon.datasets.rst  ragoon.embeddings.rst  ragoon.similarity_search.rst
docs/source/autosummary/: ragoon.embeddings.rst
notebooks/: RAGoon_EmbeddingsDataLoader_cookbook.ipynb  RAGoon_SimilaritySearch_cookbook.ipynb
src/ragoon/: __init__.py  _dataset.py  _decorators.py  _logger.py  _retrieval.py  _scrape.py  _search.py  chunks.py  datasets.py  embeddings.py  ragoon.py  similarity_search.py  web_rag.py
tests/: conftest.py  test_chunks.py  test_datasets.py  test_eel.py  test_similarity_search.py
tests/data/cgi.hf/: dataset_info.json  state.json
